--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
+<app-header></app-header>
 
-<app-product-list></app-product-list>
+<main class="main-container">
+  <app-product-list></app-product-list>
+</main>
 
+<app-footer></app-footer>
 
